job title update

--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -83,7 +83,7 @@
 
 \section{Education}
 
-\cventry{Dec 2019}{University of Minnesota}{Bioinformatics, MS}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Capstone: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
+\cventry{Dec 2019}{University of Minnesota}{Bioinformatics}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Capstone: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
 \cventry{May 2011}{University of Minnesota}{Biochemistry, BS}{Minneapolis, MN}{College of Biological Sciences}{}
 
 %-------------------------------------------------------------------------------
@@ -96,15 +96,15 @@
 
 \cvitem{Platforms}{Linux (Ubuntu, RHEL, CentOS), git, Nginx, Apache, HPC, AWS, Docker, Oracle, WordPress}
 
-\cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, jsonlite, DT}
+%\cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, jsonlite, DT}
 
-\cvitem{Genomics}{samtools, bwa-mem, bedtools, Seurat, VarScan2, Excavator, DNAcopy, parallel, SummarizedExperiment}
-
-\cvitem{Algorithms}{Hidden Markov model, FastCall}
+%\cvitem{Algorithms}{Hidden Markov model, FastCall}
 
 \cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, Hidden Markov Model, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor}
 
-\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
+\cvitem{Genomics}{10x single cell, samtools, bwa-mem, bedtools, Seurat, VarScan2, Excavator, DNAcopy, parallel}
+
+%\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
 
 %-------------------------------------------------------------------------------
 %  EXPERIENCE
@@ -113,7 +113,7 @@
 \section{Experience}
 
 % starrlab research assistant
-\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Bioinformatician}{Minneapolis, MN}{Starr Lab}{%
+\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Computational Biologist}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
         \item{Executed full rewrite of cancer gene web app: deployed new framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
@@ -129,16 +129,16 @@
         \item{Generate daily cost savings through identification and elimination of trailer runs which average to a value of \$500--1000.}
 \end{itemize}}
 
-% ups supervisor
-\cventry{Oct 2017 --- Oct 2018}{UPS}{Supervisor}{Minneapolis, MN}{Small Sort}{%
-    \begin{itemize}
-        \item{Managed a team of 35 employees in largest operational unit in the Northern Plains District HQ sort hub.}
-        \item{Delivered an immediate 15\% production increase to area within first month (representing 40\% of daily volume).}
-        \item{Developed novel improvement projects leading to elimination of package missorts and training with disability access.}
-\end{itemize}}
+%% ups supervisor
+%\cventry{Oct 2017 --- Oct 2018}{UPS}{Supervisor}{Minneapolis, MN}{Small Sort}{%
+%    \begin{itemize}
+%        \item{Managed a team of 35 employees in largest operational unit in the Northern Plains District HQ sort hub.}
+%        \item{Delivered an immediate 15\% production increase to area within first month (representing 40\% of daily volume).}
+%        \item{Developed novel improvement projects leading to elimination of package missorts and training with disability access.}
+%\end{itemize}}
 
-% ups hourly
-\cventry{June 2017 --- Oct 2017}{UPS}{Package Sorter}{Minneapolis, MN}{}{}
+%% ups hourly
+%\cventry{June 2017 --- Oct 2017}{UPS}{Package Sorter}{Minneapolis, MN}{}{}
 
 % nmdp research assistant
 \cventry{Jan 2016 --- July 2017}{National Marrow Donor Program}{Graduate Research Assistant}{Minneapolis, MN}{Bioinformatics}{%
@@ -156,13 +156,13 @@
         \item{Contributed to larger registry activities maintaining Be The Match patient-donor sample receiving, storage, and typing.}
 \end{itemize}}
 
-% mpls club server
-\cventry{Oct 2013 --- Sept 2014}{Minneapolis Club}{Banquet and Dining Server}{Minneapolis, MN}{}{%
-    \begin{itemize}
-        \item{Performed setup, service, and take down for dining room and banquets ranging from chef$'$s table dinners to events of 500+.}
-        \item{Trained in the manner of French service and hospitality to maintain an elite level of accommodation and experience.}
-        \item{Participated in maintenance and building upkeep when called upon by external departments.}
-\end{itemize}}
+%% mpls club server
+%\cventry{Oct 2013 --- Sept 2014}{Minneapolis Club}{Banquet and Dining Server}{Minneapolis, MN}{}{%
+%    \begin{itemize}
+%        \item{Performed setup, service, and take down for dining room and banquets ranging from chef$'$s table dinners to events of 500+.}
+%        \item{Trained in the manner of French service and hospitality to maintain an elite level of accommodation and experience.}
+%        \item{Participated in maintenance and building upkeep when called upon by external departments.}
+%\end{itemize}}
 
 % face to face
 \cventry{July 2012 --- Jan 2014}{Face to Face Organics LLC.}{Co-founder}{St.\ Anthony, MN}{}{%
@@ -188,56 +188,56 @@
         \item{Received highest rating among all course TAs as indicated by students in post-semester evaluations for 2012 year.}
 \end{itemize}}
 
-% mslc
-\cventry{Oct 2009 --- July 2012}{Minnesota Student Legislative Coalition}{Founder, Lobbyist, and Chairman}{Minneapolis, MN}{}{%
-    \begin{itemize}
-        \item{United leaders from all 5 U of M campuses to form the active student lobby, earning the University$'$s endorsement.}
-        \item{Directed wide range of issues: education funding, loan rates, textbook pricing, campus safety, and veteran accreditation.}
-        \item{Trained and supervised a team that guided the authorship of 4 student-specific bills during 2012 state legislative session.}
-\end{itemize}}
+%% mslc
+%\cventry{Oct 2009 --- July 2012}{Minnesota Student Legislative Coalition}{Founder, Lobbyist, and Chairman}{Minneapolis, MN}{}{%
+%    \begin{itemize}
+%        \item{United leaders from all 5 U of M campuses to form the active student lobby, earning the University$'$s endorsement.}
+%        \item{Directed wide range of issues: education funding, loan rates, textbook pricing, campus safety, and veteran accreditation.}
+%        \item{Trained and supervised a team that guided the authorship of 4 student-specific bills during 2012 state legislative session.}
+%\end{itemize}}
 
 %-------------------------------------------------------------------------------
 %  PERSONAL
 %-------------------------------------------------------------------------------
 
-\section{Personal}
-
-\cvitem{Hobbies}{Racquetball, Self-hosting software, CAD design \& 3d printing, Camping, Fishing, Hunting, Reading}
-
-\subsection{Volunteering}
-
-% trinity
-\cventry{July 2017 --- Present}{Trinity Lutheran Church of Montevideo}{IT Consultant}{Montevideo, MN}{}{}
-% recwell
-\cventry{July 2017 --- July 2017}{University of Minnesota}{Youth Camp Racquetball Coach}{Minneapolis, MN}{Recwell}{}
-% shriners
-\cventry{Dec 2008 --- May 2013}{Shriner's Hospital for Children}{Child Life Specialist}{Minneapolis, MN}{}{}
-% ducks unlimited
-\cventry{Nov 2008 --- July 2011}{Ducks Unlimited}{IT Consultant \& Umn Chapter Co-founder}{Edina, MN}{}{}
-% umems
-\cventry{Oct 2008 --- May 2010}{University Emergency Medical Services}{EMT}{Minneapolis, MN}{}{}
-% south africa
-\cventry{June 2009 --- July 2009}{Student Travel and Exposure South Africa}{Trauma Ward Aide}{Cape Town, South Africa}{}{}
+%\section{Personal}
+%
+%\cvitem{Hobbies}{Racquetball, Self-hosting software, CAD design \& 3d printing, Camping, Fishing, Hunting, Reading}
+%
+%\subsection{Volunteering}
+%
+%% trinity
+%\cventry{July 2017 --- Present}{Trinity Lutheran Church of Montevideo}{IT Consultant}{Montevideo, MN}{}{}
+%% recwell
+%\cventry{July 2017 --- July 2017}{University of Minnesota}{Youth Camp Racquetball Coach}{Minneapolis, MN}{Recwell}{}
+%% shriners
+%\cventry{Dec 2008 --- May 2013}{Shriner's Hospital for Children}{Child Life Specialist}{Minneapolis, MN}{}{}
+%% ducks unlimited
+%\cventry{Nov 2008 --- July 2011}{Ducks Unlimited}{IT Consultant \& Umn Chapter Co-founder}{Edina, MN}{}{}
+%% umems
+%\cventry{Oct 2008 --- May 2010}{University Emergency Medical Services}{EMT}{Minneapolis, MN}{}{}
+%% south africa
+%\cventry{June 2009 --- July 2009}{Student Travel and Exposure South Africa}{Trauma Ward Aide}{Cape Town, South Africa}{}{}
 
 %-------------------------------------------------------------------------------
 %  PUBLICATIONS
 %-------------------------------------------------------------------------------
 
-\bibliographystyle{unsrt}
-\nocite{refsearch,pmid22848585,pmid21425413,pmid20956382,pmid20705734}
-\bibliography{publications}
+%\bibliographystyle{unsrt}
+%\nocite{refsearch,pmid22848585,pmid21425413,pmid20956382,pmid20705734}
+%\bibliography{publications}
 
 %-------------------------------------------------------------------------------
 %  AWARDS
 %-------------------------------------------------------------------------------
 
-\section{Awards}
-
-\cvlanguage{Advocate of the Year}{University of Minnesota Alumni Association}{Oct, 2012}
-\cvlanguage{Spirit of MSA (MVP)}{Minnesota Student Association}{May, 2012}
-\cvlanguage{Highest Rated TA}{CBS BIOL2004 Lab Students}{May, 2012}
-\cvlanguage{Research Fellowship}{Gregory Marzolf Jr. Foundation}{Sept, 2009}
-\cvlanguage{Distinct Honor --- Presenter's Award}{LHI/SCI Building Muscle and Blood Conference}{Oct, 2009}
-\cvlanguage{Undergraduate Research Opportunity Grant}{University of Minnesota}{2008, 2009, 2011}
+%\section{Awards}
+%
+%\cvlanguage{Advocate of the Year}{University of Minnesota Alumni Association}{Oct, 2012}
+%\cvlanguage{Spirit of MSA (MVP)}{Minnesota Student Association}{May, 2012}
+%\cvlanguage{Highest Rated TA}{CBS BIOL2004 Lab Students}{May, 2012}
+%\cvlanguage{Research Fellowship}{Gregory Marzolf Jr. Foundation}{Sept, 2009}
+%\cvlanguage{Distinct Honor --- Presenter's Award}{LHI/SCI Building Muscle and Blood Conference}{Oct, 2009}
+%\cvlanguage{Undergraduate Research Opportunity Grant}{University of Minnesota}{2008, 2009, 2011}
 
 \end{document}
