--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -21,8 +21,8 @@
 % custom commands
 \newcommand{\myphone}{(612) 817--7989}
 \newcommand{\myemail}{ctastad@gmail.com}
-\newcommand{\company}{***}
-\newcommand{\role}{***}
+\newcommand{\company}{NovuHealth}
+\newcommand{\role}{ETL Engineer}
 
 % drone work around
 \newcommand{\droneWorkAround}{{\fontsize{0.1}{0}\selectfont \transparent{0}{.}}}
@@ -44,7 +44,7 @@
 %-------------------------------------------------------------------------------
 
 %\title{Letter}
-%\recipient{HR Department}{\company{} \\ ADDRESS \\ CITY, STATE ZIP}
+%\recipient{HR Department}{\company{} \\ 5401 Gamble Drive, Suite 300 \\ Minneapolis, MN 55416}
 %\date{\today}
 %\opening{To Whom It May Concern,}
 %\closing{Sincerely,}
@@ -94,7 +94,7 @@
 
 \cvitem{Languages}{R, BASH, \LaTeX, SQL, HTML, CSS, XML, JSON}
 
-\cvitem{Platforms}{Linux (Ubuntu, RHEL, CentOS), git, Nginx, Apache, HPC, AWS, Docker, Oracle, WordPress}
+\cvitem{Platforms}{Linux (Ubuntu, RHEL, CentOS), git, Nginx, Apache, HPC, AWS, PostgreSQL, Docker, Oracle, WordPress}
 
 %\cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, jsonlite, DT}
 
