made minor change to language skill section

--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -92,7 +92,7 @@
 
 \section{Skills}
 
-\cvitem{Languages}{R, BASH, \LaTeX, SQL, HTML, CSS, XML, JSON}
+\cvitem{Languages}{R, BASH, Python, \LaTeX, SQL, HTML, CSS, XML, JSON}
 
 \cvitem{Platforms}{Linux (Ubuntu, RHEL, CentOS), git, Nginx, Apache, HPC, AWS, PostgreSQL, Docker, Oracle, WordPress}
 
