updated degree title abbrv

--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -83,7 +83,7 @@
 
 \section{Education}
 
-\cventry{Dec 2019}{University of Minnesota}{Bioinformatics}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Capstone: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
+\cventry{Dec 2019}{University of Minnesota}{Bioinformatics, MS}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Capstone: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
 \cventry{May 2011}{University of Minnesota}{Biochemistry, BS}{Minneapolis, MN}{College of Biological Sciences}{}
 
 %-------------------------------------------------------------------------------
