updated skills section and minor word choice

--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -1,4 +1,3 @@
-
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 %  PREAMBLE
@@ -83,7 +82,7 @@
 
 \section{Education}
 
-\cventry{Dec 2019}{University of Minnesota}{Bioinformatics, MS}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Capstone: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
+\cventry{Dec 2019}{University of Minnesota}{Bioinformatics, MS}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Thesis: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
 \cventry{May 2011}{University of Minnesota}{Biochemistry, BS}{Minneapolis, MN}{College of Biological Sciences}{}
 
 %-------------------------------------------------------------------------------
@@ -102,7 +101,7 @@
 
 \cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, Hidden Markov Model, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor}
 
-\cvitem{Genomics}{10x single cell, samtools, bwa-mem, bedtools, Seurat, VarScan2, Excavator, DNAcopy, parallel}
+%\cvitem{Genomics}{10x single cell, samtools, bwa-mem, bedtools, Seurat, VarScan2, Excavator, DNAcopy, parallel}
 
 %\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
 
@@ -115,7 +114,7 @@
 % starrlab research assistant
 \cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Computational Biologist}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
-        \item{Executed full rewrite of cancer gene web app: deployed new framework, reduced codebase, removed need for SQL database.}
+        \item{Executed full rewrite of cancer gene web app: deployed new ETL framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
         \item{Developed pipeline to automate analysis process from raw data to figures, incorporating HMM and FastCall algorithms.}
 \end{itemize}}
