made bio specific role/skill tweaks

--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -82,8 +82,8 @@
 
 \section{Education}
 
-\cventry{Dec 2019}{University of Minnesota}{Bioinformatics, MS}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Thesis: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
-\cventry{May 2011}{University of Minnesota}{Biochemistry, BS}{Minneapolis, MN}{College of Biological Sciences}{}
+\cventry{2020}{University of Minnesota}{Bioinformatics, MS}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Thesis: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
+\cventry{2011}{University of Minnesota}{Biochemistry, BS}{Minneapolis, MN}{College of Biological Sciences}{}
 
 %-------------------------------------------------------------------------------
 %  SKILLS
@@ -101,9 +101,9 @@
 
 \cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, Hidden Markov Model, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor}
 
-%\cvitem{Genomics}{10x single cell, samtools, bwa-mem, bedtools, Seurat, VarScan2, Excavator, DNAcopy, parallel}
+\cvitem{Genomics}{10x single cell, samtools, bwa-mem, bedtools, Seurat, VarScan2, Excavator, DNAcopy, parallel}
 
-%\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
+\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
 
 %-------------------------------------------------------------------------------
 %  EXPERIENCE
@@ -112,21 +112,21 @@
 \section{Experience}
 
 % starrlab research assistant
-\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Computational Biologist}{Minneapolis, MN}{Starr Lab}{%
+\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
         \item{Executed full rewrite of cancer gene web app: deployed new ETL framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
         \item{Developed pipeline to automate analysis process from raw data to figures, incorporating HMM and FastCall algorithms.}
 \end{itemize}}
 
-% load planner
-\cventry{Oct 2018 --- Present}{UPS}{Load Planning Engineer}{Minneapolis, MN}{Industrial Engineering}{%
-    \begin{itemize}
-        \item{Primary authority in guiding all load functions for 112 outbound doors; mediating hub, feeder, and engineering priorities.}
-        \item{Advance district level interests through industrial engineering technologies for operational, flow, and system analysis.}
-%        \item{Operate with a wide latitude in exploring opportunities for cost saving measures for management and stakeholders.}
-        \item{Generate daily cost savings through identification and elimination of trailer runs which average to a value of \$500--1000.}
-\end{itemize}}
+%% load planner
+%\cventry{Oct 2018 --- Present}{UPS}{Load Planning Engineer}{Minneapolis, MN}{Industrial Engineering}{%
+%    \begin{itemize}
+%        \item{Primary authority in guiding all load functions for 112 outbound doors; mediating hub, feeder, and engineering priorities.}
+%        \item{Advance district level interests through industrial engineering technologies for operational, flow, and system analysis.}
+%%        \item{Operate with a wide latitude in exploring opportunities for cost saving measures for management and stakeholders.}
+%        \item{Generate daily cost savings through identification and elimination of trailer runs which average to a value of \$500--1000.}
+%\end{itemize}}
 
 %% ups supervisor
 %\cventry{Oct 2017 --- Oct 2018}{UPS}{Supervisor}{Minneapolis, MN}{Small Sort}{%
