--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -20,8 +20,8 @@
 % custom commands
 \newcommand{\myphone}{(612) 817--7989}
 \newcommand{\myemail}{ctastad@gmail.com}
-\newcommand{\company}{NovuHealth}
-\newcommand{\role}{ETL Engineer}
+\newcommand{\company}{Genentech}
+\newcommand{\role}{Computational Biologist}
 
 % drone work around
 \newcommand{\droneWorkAround}{{\fontsize{0.1}{0}\selectfont \transparent{0}{.}}}
@@ -43,7 +43,7 @@
 %-------------------------------------------------------------------------------
 
 %\title{Letter}
-%\recipient{HR Department}{\company{} \\ 5401 Gamble Drive, Suite 300 \\ Minneapolis, MN 55416}
+%\recipient{HR Department}{\company{} 1 DNA Way \\ South San Francisco, CA 94080}
 %\date{\today}
 %\opening{To Whom It May Concern,}
 %\closing{Sincerely,}
@@ -54,13 +54,16 @@
 %I am interested in applying for the \role{} position with \company{}. With my background, I provide a unique blend of content knowledge, technical analysis, and relevant experience that make me a strong fit for the role. I have brought this aptitude together through a few core principles which I have applied in a diverse range of settings. Critical thinking and objectivity guide my approach; independence and competency carry to completion; and an attraction towards establishing effective systems elevates outcomes.
 %
 %% Asakura lab
-%My path toward data science began in basic science working in stem cell development with a disease model of muscular dystrophy. As a research associate in The Stem Cell Institute, I worked in a central role through independent project coordination, grant and manuscript writing, lab member training, and overall lab management. While serving in this position, I employed strict research methodology and analysis to produce publication quality data. With that, I often presented and defended my efforts to both my primary investigator and the broader scientific community. The product of this work led to several co-authorships in high impact journals as well as being awarded individual grant monies with contributions to lab-wide grants.
+%My path in technology began in basic science working in stem cell development with a disease model of muscular dystrophy. As a research associate in The Stem Cell Institute, I worked in a central role through independent project coordination, grant and manuscript writing, lab member training, and overall lab management. While serving in this position, I employed strict research methodology and analysis to produce publication quality data. With that, I often presented and defended my efforts to both my primary investigator and the broader scientific community. The product of this work led to several co-authorships in high impact journals as well as being awarded individual grant monies with contributions to lab-wide grants.
 %
 %% Informatics for analysis
-%In recent history, I have focused in the study of handling large genetic data sets, particularly in Cancer Biology. As an integrative field, I've brought my medical content knowledge forward with the development of advanced skill sets in statistical and computational modeling. By developing expertise in this area, I have drastically expanded the nature, flexibility, and application of the analytics capabilities that underline my scientific training. Most importantly, my ability to work with large data sets has become subject agnostic and can translate to any intensive technical task, all of which would be well suited to \company{}'s business objectives.
+%In recent history, I have focused in the study of handling large genetic data sets, particularly in Cancer Biology. As an integrative field, I've brought my Biological content knowledge forward with the development of advanced skill sets in statistical and computational modeling. By developing expertise in this area, I have drastically expanded the nature, flexibility, and application of the technical capabilities that underline my scientific training. Most importantly, my ability to work with large data sets has become subject agnostic and can translate to any intensive technical task, all of which would be well suited to \company{}'s business objectives.
+%
+%% Tecan tech role
+%%In recent history, I have focused in the study of handling large data sets, particularly in Cancer Biology. As an integrative field, I've brought my Biological content knowledge forward with the development of advanced skill sets in statistical modeling and programming. By developing expertise in this area, I have drastically expanded the nature, flexibility, and application of the technical capabilities that underline my scientific training. Most importantly, this growth in aptitute has acheived greater fluiditiy that I believe can translate to any intensive technical task, all of which would be well suited to the \role{} role.
 %
 %% General closer
-%Taken together, I would appreciate further consideration and an opportunity to interview with \company{} for the \role{} role. Please feel free to contact me at \myphone{} or \myemail{}.
+%Taken together, I would appreciate further consideration and an opportunity to interview with \company{} for the \role{} position. Please feel free to contact me at \myphone{} or \myemail{}.
 %
 %\hfill \break{}
 %
@@ -82,8 +85,9 @@
 
 \section{Education}
 
-\cventry{2020}{University of Minnesota}{Bioinformatics, MS}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Thesis: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
-\cventry{2011}{University of Minnesota}{Biochemistry, BS}{Minneapolis, MN}{College of Biological Sciences}{}
+\cventry{2021}{University of Minnesota}{Bioinformatics, MS}{Minneapolis, MN}{Bioinformatics and Computational Biology}{}
+%\cventry{2020}{University of Minnesota}{Bioinformatics, MS}{Minneapolis, MN}{Bioinformatics and Computational Biology}{Thesis: Copy number variation in ovarian cancer from single cell and whole exome sequencing data.}
+\cventry{2012}{University of Minnesota}{Biochemistry, BS}{Minneapolis, MN}{College of Biological Sciences}{}
 
 %-------------------------------------------------------------------------------
 %  SKILLS
@@ -112,13 +116,17 @@
 \section{Experience}
 
 % starrlab research assistant
-\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
+\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Computational Biologist (unpaid)}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
         \item{Executed full rewrite of cancer gene web app: deployed new ETL framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
         \item{Developed pipeline to automate analysis process from raw data to figures, incorporating HMM and FastCall algorithms.}
 \end{itemize}}
 
+
+\cventry{July 2017 --- Present}{UPS}{PT Supervisor, Load Planning Engineer}{Minneapolis, MN}{Hub Ops | Industrial Engineering}{%
+    \begin{itemize}
+\end{itemize}}
 %% load planner
 %\cventry{Oct 2018 --- Present}{UPS}{Load Planning Engineer}{Minneapolis, MN}{Industrial Engineering}{%
 %    \begin{itemize}
@@ -156,12 +164,12 @@
 \end{itemize}}
 
 %% mpls club server
-%\cventry{Oct 2013 --- Sept 2014}{Minneapolis Club}{Banquet and Dining Server}{Minneapolis, MN}{}{%
-%    \begin{itemize}
+\cventry{Oct 2013 --- Sept 2014}{Minneapolis Club}{Banquet and Dining Server}{Minneapolis, MN}{}{%
+    \begin{itemize}
 %        \item{Performed setup, service, and take down for dining room and banquets ranging from chef$'$s table dinners to events of 500+.}
 %        \item{Trained in the manner of French service and hospitality to maintain an elite level of accommodation and experience.}
 %        \item{Participated in maintenance and building upkeep when called upon by external departments.}
-%\end{itemize}}
+\end{itemize}}
 
 % face to face
 \cventry{July 2012 --- Jan 2014}{Face to Face Organics LLC.}{Co-founder}{St.\ Anthony, MN}{}{%
@@ -179,13 +187,13 @@
         \item{Authored significant writing efforts for group manuscripts and major grant awards, including a successful R01 bid.}
 \end{itemize}}
 
-% 2004 teaching assistant
-\cventry{Sept 2009 --- May 2012}{University of Minnesota}{Teaching Assistant}{St.\ Paul, MN}{CBS BIOL2004}{%
-    \begin{itemize}
-        \item{Led teaching lab that included an integrative, research-focused curriculum, highlighting significant independent discovery.}
-        \item{Consistently called on by course instructor for consultation in the improvement of course materials and curriculum.}
-        \item{Received highest rating among all course TAs as indicated by students in post-semester evaluations for 2012 year.}
-\end{itemize}}
+%% 2004 teaching assistant
+%\cventry{Sept 2009 --- May 2012}{University of Minnesota}{Teaching Assistant}{St.\ Paul, MN}{CBS BIOL2004}{%
+%    \begin{itemize}
+%        \item{Led teaching lab that included an integrative, research-focused curriculum, highlighting significant independent discovery.}
+%        \item{Consistently called on by course instructor for consultation in the improvement of course materials and curriculum.}
+%        \item{Received highest rating among all course TAs as indicated by students in post-semester evaluations for 2012 year.}
+%\end{itemize}}
 
 %% mslc
 %\cventry{Oct 2009 --- July 2012}{Minnesota Student Legislative Coalition}{Founder, Lobbyist, and Chairman}{Minneapolis, MN}{}{%
