added more detail to sinai role

--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -99,7 +99,7 @@
 
 \cvitem{Platforms}{Linux (Ubuntu, RHEL, CentOS), git, Nginx, Apache, HPC, AWS, PostgreSQL, Docker, Oracle, WordPress}
 
-%\cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, jsonlite, DT}
+\cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, jsonlite, DT}
 
 %\cvitem{Algorithms}{Hidden Markov model, FastCall}
 
@@ -107,7 +107,7 @@
 
 \cvitem{Genomics}{10x single cell, samtools, bwa-mem, bedtools, Seurat, VarScan2, Excavator, DNAcopy, parallel}
 
-\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
+%\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
 
 %-------------------------------------------------------------------------------
 %  EXPERIENCE
@@ -115,20 +115,34 @@
 
 \section{Experience}
 
+% cholab bioinformatician
+\cventry{Feb 2021 --- Present}{Icahn School of Medicine at Mount Sinai}{Bioinformatician}{New York, NY}{Cho Lab}{%
+    \begin{itemize}
+        \item{Serve as strategy lead for tool development, methodological approach, and workload allocation.}
+        \item{Team lead for recruitment, hiring, on boarding, and personnel management of new informatics hires.}
+        \item{Primary liaison for project management between teams. Introduced "light" Agile methods to address streamlining opportunities.}
+        \item{Transitioned full scope of on-prem data content/distribution, code base management, and web services to AWS and Google Workspaces, increasing up-time, durability, and user access.}
+        \item{Post cloud transition: owner of all facets of future dev and ops - strategy, design, architecting, deployment, admin.}
+        \item{Implemented practice in development for creating automated, reproducible, portable tools for standardized analysis and workflows.}
+        \item{Established standards of best practice for routine, consistent documentation of informatics methods and analysis.}
+        \item{Introduced quarterly informatics team workload assessment process for defining and updating project scope.}
+        \item{Introduced daily informatics stand-up meetings and weekly office hour to foster collaboration across on-site and remote staff.}
+        \item{Led design for data wrangling approach for several cutting-edge multimodal single cell techs (ATAC, VDJ, fixed RNA, CRISPR).}
+        \item{Designed and deployed fully portable containerized dev environments to suit both wet and dry lab user needs.}
+        \item{Coordinated purchase of dedicated HPC hardware to serve as central collaboration environment for cross-institutional partners.}
+        \item{Designed and built low grade, on-prem compute server for interactive use to expand compute access to non-HPC users.}
+\end{itemize}}
+
 % starrlab research assistant
-\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Computational Biologist (unpaid)}{Minneapolis, MN}{Starr Lab}{%
+\cventry{May 2019 --- Feb 2021}{University of Minnesota Dept.\ of OBGYN}{Computational Biologist}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
         \item{Executed full rewrite of cancer gene web app: deployed new ETL framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
         \item{Developed pipeline to automate analysis process from raw data to figures, incorporating HMM and FastCall algorithms.}
 \end{itemize}}
 
-
-\cventry{July 2017 --- Present}{UPS}{PT Supervisor, Load Planning Engineer}{Minneapolis, MN}{Hub Ops | Industrial Engineering}{%
-    \begin{itemize}
-\end{itemize}}
 %% load planner
-%\cventry{Oct 2018 --- Present}{UPS}{Load Planning Engineer}{Minneapolis, MN}{Industrial Engineering}{%
+%\cventry{Oct 2018 --- Jan 2021}{UPS}{Load Planning Engineer}{Minneapolis, MN}{Industrial Engineering}{%
 %    \begin{itemize}
 %        \item{Primary authority in guiding all load functions for 112 outbound doors; mediating hub, feeder, and engineering priorities.}
 %        \item{Advance district level interests through industrial engineering technologies for operational, flow, and system analysis.}
@@ -156,7 +170,7 @@
 \end{itemize}}
 
 % biorepository tech
-\cventry{Sept 2014 --- Jan 2016}{National Marrow Donor Program}{Biorepository Technician}{New Brighton, MN}{Research Repository}{%
+\cventry{Sep 2014 --- Jan 2016}{National Marrow Donor Program}{Biorepository Technician}{New Brighton, MN}{Research Repository}{%
     \begin{itemize}
         \item{Conducted specimen processing in high-throughput clinical laboratory facility, processing 1000s of samples per day.}
         \item{Managed 300k patient database and long-term storage for FDA and Clinical Trials Network samples using GLP.}
@@ -164,20 +178,20 @@
 \end{itemize}}
 
 %% mpls club server
-\cventry{Oct 2013 --- Sept 2014}{Minneapolis Club}{Banquet and Dining Server}{Minneapolis, MN}{}{%
-    \begin{itemize}
+%\cventry{Oct 2013 --- Sep 2014}{Minneapolis Club}{Banquet and Dining Server}{Minneapolis, MN}{}{%
+    %\begin{itemize}
 %        \item{Performed setup, service, and take down for dining room and banquets ranging from chef$'$s table dinners to events of 500+.}
 %        \item{Trained in the manner of French service and hospitality to maintain an elite level of accommodation and experience.}
 %        \item{Participated in maintenance and building upkeep when called upon by external departments.}
-\end{itemize}}
+%\end{itemize}}
 
-% face to face
-\cventry{July 2012 --- Jan 2014}{Face to Face Organics LLC.}{Co-founder}{St.\ Anthony, MN}{}{%
-    \begin{itemize}
-        \item{Co-founded a personal care products start up that connected social activism with our product and its use.}
-        \item{Deployed company$'$s operating software stack on limited budget with minimal upfront cost or sustained overhead.}
-        \item{Established company systems around e-commerce, CRM, distribution, logistics, accounting, sales tracking, and inventory.}
-\end{itemize}}
+%% face to face
+%\cventry{July 2012 --- Jan 2014}{Face to Face Organics LLC.}{Co-founder}{St.\ Anthony, MN}{}{%
+%    \begin{itemize}
+%        \item{Co-founded a personal care products start up that connected social activism with our product and its use.}
+%        \item{Deployed company$'$s operating software stack on limited budget with minimal upfront cost or sustained overhead.}
+%        \item{Established company systems around e-commerce, CRM, distribution, logistics, accounting, sales tracking, and inventory.}
+%\end{itemize}}
 
 % asakura lab
 \cventry{Dec 2007 --- Jan 2013}{The Stem Cell Institute}{Research Associate}{Minneapolis, MN}{Asakura Lab}{%
@@ -187,8 +201,8 @@
         \item{Authored significant writing efforts for group manuscripts and major grant awards, including a successful R01 bid.}
 \end{itemize}}
 
-%% 2004 teaching assistant
-%\cventry{Sept 2009 --- May 2012}{University of Minnesota}{Teaching Assistant}{St.\ Paul, MN}{CBS BIOL2004}{%
+% 2004 teaching assistant
+%\cventry{Sep 2009 --- May 2012}{University of Minnesota}{Teaching Assistant}{St.\ Paul, MN}{CBS BIOL2004}{%
 %    \begin{itemize}
 %        \item{Led teaching lab that included an integrative, research-focused curriculum, highlighting significant independent discovery.}
 %        \item{Consistently called on by course instructor for consultation in the improvement of course materials and curriculum.}
@@ -243,7 +257,7 @@
 %\cvlanguage{Advocate of the Year}{University of Minnesota Alumni Association}{Oct, 2012}
 %\cvlanguage{Spirit of MSA (MVP)}{Minnesota Student Association}{May, 2012}
 %\cvlanguage{Highest Rated TA}{CBS BIOL2004 Lab Students}{May, 2012}
-%\cvlanguage{Research Fellowship}{Gregory Marzolf Jr. Foundation}{Sept, 2009}
+%\cvlanguage{Research Fellowship}{Gregory Marzolf Jr. Foundation}{Sep, 2009}
 %\cvlanguage{Distinct Honor --- Presenter's Award}{LHI/SCI Building Muscle and Blood Conference}{Oct, 2009}
 %\cvlanguage{Undergraduate Research Opportunity Grant}{University of Minnesota}{2008, 2009, 2011}
 
